[package]
name = "dnp3_tester"
version = "1.0.0"
edition = "2021"

[dependencies]
# DNP3 Protocol
dnp3 = "1.6"

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Web Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Embed Frontend
rust-embed = "8.5"
mime_guess = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Auto-open browser
open = "5.0"
fastrand = "2.0"
tokio-serial = "5.4"
serialport = "4.7"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
